# GraphOS_VM

./: .gitignore  CMakeLists.txt
app/: main.cpp
dataset/: data_gen.py
include/: AVLTree.h  Bid.h  Common.h  DOHEAP.hpp  Enclave.h  LocalRAMStore.hpp  Node.h  OMAP.h  ORAM.hpp  ORAMEnclaveInterface.h  ObliviousOperations.h  PRF.h  RAMStore.hpp  RAMStoreEnclaveInterface.h  Types.h
src/: AVLTree.cpp  Bid.cpp  DOHEAP.cpp  Enclave.cpp  HeapObliviousOperations.cpp  OHeap.cpp  OMAP.cpp  ORAM.cpp  ORAMEnclaveInterface.cpp  ObliviousOperations.cpp  PRF.cpp  RAMStoreEnclaveInterface.cpp
